# scraping_with_scrapy

./: items.csv  items.json  pyproject.toml  quotes.py
