[project]
name = "scraping_with_scrapy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "arunkhattri", email = "arunkhattri@outlook.com"},
]
dependencies = [
    "Scrapy>=2.11.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "GPLv3"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "python-lsp-server>=1.10.0",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "pytest>=8.0.1",
    "ipython>=8.21.0",
    "python-decouple>=3.8",
]
